Require tool namespaces optionally, fix tests, update docs.